# dsphs_gnn

./: .gitmodules  LICENSE.md  MANIFEST.in  README.md  config.ini  process_ds.py  sample_posteriors.py  setup.cfg  setup.py  train_gnn.py
config/: example.json
dsph_gnn/: __init__.py  data_module.py  envs.py  gnn.py  transforms.py  utils.py
dsphs_gnn/: data_module.py  physics.py  transforms.py  utils.py
dsphs_gnn/scripts/: process_ds.py  sample_posteriors_fire.py
example_data/: validation.h5
src/dsphs_gnn/: __init__.py  config.py  data_module.py  flows.py  gnn.py  logger.py  physics.py  utils.py
src/scripts/: process_ds.py  sample_posteriors.py  sample_posteriors_fire.py  train_gnn.py
