[metadata]
name = dsphs_gnn
version = 0.0.0
description = Sample the posteriors of dark matter density profiles of dwarf spheroidal galaxies using graph neural networks
author = Tri Nguyen
author_email = tnguy@mit.edu
url = https://github.com/trivnguyen/dsphs_gnn

[options]
packages = find:
package_dir =
    = src
install_requires =
    # List your requirements here
    numpy
    torch
    torch_geometric
    pytorch_lightning
    scipy

[options.package_data]
dsphs_gnn = config.ini

[options.packages.find]
where = src
include_package_data = True
